--- a/EventManagementSystemUI/MainWindow.xaml
+++ b/EventManagementSystemUI/MainWindow.xaml
@@ -22,7 +22,32 @@
                
                 <Button Content="Groups" Command="{Binding NavigateCommand}" CommandParameter="Groups" Margin="5" />
                 <Button Content="Profile" Command="{Binding NavigateCommand}" CommandParameter="Profile" Margin="5" />
-                <Button Content="New Event"  Visibility= "{Binding NewEventButtonVisibility}"/>
+                <Button Content="New Event" Command="{Binding NavigateCommand}" CommandParameter="NewEvent" Visibility= "{Binding NewEventButtonVisibility}"
+                        Margin="5" Padding="10,5" Style="{DynamicResource MaterialDesignRaisedButton}"
+                        Background="#FFF32B21" Foreground="White" 
+                        ToolTip="Currently viewing New Event page" 
+                        materialDesign:ButtonProgressAssist.IsIndeterminate="True" BorderBrush="#FFF32B21">
+                    <Button.Triggers>
+                        <EventTrigger RoutedEvent="Button.MouseEnter">
+                            <BeginStoryboard>
+                                <Storyboard>
+                                    <ColorAnimation Storyboard.TargetProperty="(Button.Background).(SolidColorBrush.Color)"
+                                                    To="#FF42A5F5" Duration="0:0:0.2" />
+                                </Storyboard>
+                            </BeginStoryboard>
+                        </EventTrigger>
+                        <EventTrigger RoutedEvent="Button.MouseLeave">
+                            <BeginStoryboard>
+                                <Storyboard>
+                                    <ColorAnimation Storyboard.TargetProperty="(Button.Background).(SolidColorBrush.Color)"
+                                                    To="#FF2196F3" Duration="0:0:0.2" />
+                                </Storyboard>
+                            </BeginStoryboard>
+                        </EventTrigger>
+                    </Button.Triggers>
+
+
+                </Button>
             </StackPanel>
         </materialDesign:Card>
         <!-- Main Content -->
