--- a/EventManagementSystemUI/Views/EventManagementView.xaml
+++ b/EventManagementSystemUI/Views/EventManagementView.xaml
@@ -14,7 +14,7 @@
             <TextBlock Text="Event Management" Style="{StaticResource MaterialDesignHeadline5TextBlock}" Margin="0,0,136,0"/>
         </materialDesign:Card>
         <Button Content="Refresh" Command="{Binding LoadEventsCommand}" Margin="430,10,10,10" Style="{DynamicResource MaterialDesignFlatButton}" />
-        <Button Content="New Event" Command="{Binding NewEventCommand}" Margin="320,10,110,10" Style="{DynamicResource MaterialDesignFlatButton}" />
+        <Button Content="New Event" Command="{Binding ShowNewEventCommand}" Margin="320,10,110,10" Style="{DynamicResource MaterialDesignFlatButton}" />
         <Grid Grid.Row="1" Margin="0,10,0,0">
             <materialDesign:Card>
                 <StackPanel>
