--- a/EventManagementSystemUI/Views/NewEvent.xaml
+++ b/EventManagementSystemUI/Views/NewEvent.xaml
@@ -1,22 +1,118 @@
 ﻿<UserControl x:Class="EventManagementSystemUI.Views.NewEvent"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:EventManagementSystemUI.Views"
-             mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+          xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+          xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+          xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+          xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+          xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
+          xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+          xmlns:vm="clr-namespace:EventManagementSystemUI.ViewModels" d:DataContext="{d:DesignInstance Type=vm:MainViewModel}"
+             mc:Ignorable="d"
+          d:DesignHeight="450" d:DesignWidth="800">
+    
+    <Grid Margin="20">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="150"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
 
-    <Grid Margin="10">
-        <StackPanel Orientation="Vertical">
-            <TextBlock Text="New Event" FontSize="16" FontWeight="Bold" Margin="0,0,0,10"/>
-            <TextBox x:Name="txtTitle" Margin="5" Padding="5" Text="Enter Title"/>
-            <TextBox x:Name="rtxtDescription" Margin="5" Padding="5" Text="Enter Description" Height="60" AcceptsReturn="True"/>
-            <DatePicker x:Name="dtmPickerStartDate" Margin="5"/>
-            <DatePicker x:Name="dtmPickerEndDate" Margin="5"/>
-            <TextBox x:Name="txtLocation" Margin="5" Padding="5" Text="Enter Location"/>
-            <Button Content="Submit" Margin="5" Padding="5" Background="LightGreen"/>
-            <Button Content="Cancel" Command="{Binding HideNewEventCommand}" Margin="5" Padding="5" Background="LightBlue"/>
+        <!-- Header -->
+        <TextBlock Grid.Row="0" Grid.ColumnSpan="3" Text="Create New Event" FontSize="24" FontWeight="Bold" 
+                Foreground="{DynamicResource MaterialDesignBody}" Margin="0,0,0,20" 
+                HorizontalAlignment="Center"/>
+        <!-- Fix: Replaced 'ElevationAssist.Elevation' with 'ShadowAssist.ShadowDepth' as 'Elevation' is not valid for TextBlock. -->
+
+        <!-- Title -->
+        <TextBlock Grid.Row="1" Text="Title:" VerticalAlignment="Center" Margin="5" FontSize="14"/>
+        <TextBox Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" Margin="5" Padding="5" 
+              Text="{Binding EventTitle, UpdateSourceTrigger=PropertyChanged}" 
+              Style="{DynamicResource MaterialDesignOutlinedTextBox}" 
+              materialDesign:HintAssist.Hint="Enter event title" 
+              materialDesign:HintAssist.IsFloating="True"/>
+
+        <!-- Description -->
+        <TextBlock Grid.Row="2" Text="Description:" VerticalAlignment="Center" Margin="5" FontSize="14"/>
+        <TextBox Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" Margin="5" Padding="5" 
+              Text="{Binding EventDescription, UpdateSourceTrigger=PropertyChanged}" 
+              Height="100" AcceptsReturn="True" TextWrapping="Wrap" 
+              Style="{DynamicResource MaterialDesignOutlinedTextBox}" 
+              materialDesign:HintAssist.Hint="Enter event description" 
+              materialDesign:HintAssist.IsFloating="True"/>
+
+        <!-- Start Date -->
+        <TextBlock Grid.Row="3" Text="Start Date:" VerticalAlignment="Center" Margin="5" FontSize="14"/>
+        <xctk:DateTimePicker Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="2" Margin="5" Padding="5" 
+                     Value="{Binding EventStartDateTime, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
+                     Format="Custom" FormatString="yyyy-MM-dd HH:mm"  />
+        <!-- End Date -->
+        <TextBlock Grid.Row="4" Text="End Date:" VerticalAlignment="Center" Margin="5" FontSize="14"/>
+        <xctk:DateTimePicker Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="2" Margin="5" Padding="5"
+             Value="{Binding EventEndDateTime, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
+             Format="Custom" FormatString="yyyy-MM-dd HH:mm"  />
+
+        <!-- Location -->
+        <TextBlock Grid.Row="5" Text="Location:" VerticalAlignment="Center" Margin="5" FontSize="14"/>
+        <TextBox Grid.Row="5" Grid.Column="1" Grid.ColumnSpan="2" Margin="5" Padding="5" 
+                 Text="{Binding EventLocation, UpdateSourceTrigger=PropertyChanged}" 
+                 Style="{DynamicResource MaterialDesignOutlinedTextBox}" 
+                 materialDesign:HintAssist.Hint="Enter event location" 
+                 materialDesign:HintAssist.IsFloating="True"/>
+        <!-- Buttons -->
+        <StackPanel Grid.Row="6" Grid.ColumnSpan="3" Orientation="Horizontal" HorizontalAlignment="Right" Margin="5">
+            <Button Content="Submit" Margin="5" Padding="15,5" Style="{DynamicResource MaterialDesignRaisedButton}"
+                    Background="#FF4CAF50" Foreground="White" Command="{Binding SubmitNewEventCommand}"
+                    >
+                <Button.Triggers>
+                    <EventTrigger RoutedEvent="Button.MouseEnter">
+                        <BeginStoryboard>
+                            <Storyboard>
+                                <ColorAnimation Storyboard.TargetProperty="(Button.Background).(SolidColorBrush.Color)"
+                                                To="#FF66BB6A" Duration="0:0:0.2" />
+                            </Storyboard>
+                        </BeginStoryboard>
+                    </EventTrigger>
+                    <EventTrigger RoutedEvent="Button.MouseLeave">
+                        <BeginStoryboard>
+                            <Storyboard>
+                                <ColorAnimation Storyboard.TargetProperty="(Button.Background).(SolidColorBrush.Color)"
+                                                To="#FF4CAF50" Duration="0:0:0.2" />
+                            </Storyboard>
+                        </BeginStoryboard>
+                    </EventTrigger>
+                </Button.Triggers>
+            </Button>
+            <Button Content="Cancel" Margin="5" Padding="15,5" Style="{DynamicResource MaterialDesignRaisedButton}"
+                    Background="#FF607D8B" Foreground="White" Command="{Binding CancelNewEventCommand}"
+                    >
+                <Button.Triggers>
+                    <EventTrigger RoutedEvent="Button.MouseEnter">
+                        <BeginStoryboard>
+                            <Storyboard>
+                                <ColorAnimation Storyboard.TargetProperty="(Button.Background).(SolidColorBrush.Color)"
+                                                To="#FF78909C" Duration="0:0:0.2" />
+                            </Storyboard>
+                        </BeginStoryboard>
+                    </EventTrigger>
+                    <EventTrigger RoutedEvent="Button.MouseLeave">
+                        <BeginStoryboard>
+                            <Storyboard>
+                                <ColorAnimation Storyboard.TargetProperty="(Button.Background).(SolidColorBrush.Color)"
+                                                To="#FF607D8B" Duration="0:0:0.2" />
+                            </Storyboard>
+                        </BeginStoryboard>
+                    </EventTrigger>
+                </Button.Triggers>
+            </Button>
         </StackPanel>
+
     </Grid>
 </UserControl>
