Add Group properties and enhance UI interactions
Updated the `Group` class to include `City` and `Description` properties. Modified button color animations in `MainWindow.xaml`. Introduced a new observable collection for `groups` in `MainViewModel.cs` and added a method to load groups from the API. Enhanced validation in `SubmitNewEvent` and updated `GroupManagementView.xaml` to display group information with new bindings.

--- a/EventManagementSystemUI/Views/GroupManagementView.xaml
+++ b/EventManagementSystemUI/Views/GroupManagementView.xaml
@@ -4,11 +4,14 @@
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes">
     <Grid Margin="10">
         <StackPanel>
-            <TextBlock Text="Manage Groups" Style="{StaticResource MaterialDesignHeadline5TextBlock}" Margin="10" />
-            <ListView Height="400">
+            <TextBlock Text="Manage Groups" Style="{StaticResource MaterialDesignHeadline5TextBlock}" Margin="10" 
+                       materialDesign:ElevationAssist.Elevation="Dp2"/>
+            <ListView Height="400" ItemsSource="{Binding Groups}">
                 <ListView.View>
                     <GridView>
-                        <GridViewColumn Header="Name" Width="150" />
+                        <GridViewColumn Header="Name" DisplayMemberBinding="{Binding Name}" Width="150" />
+                        <GridViewColumn Header="City" DisplayMemberBinding="{Binding City}" Width="150" />
+                        <GridViewColumn Header="Description" DisplayMemberBinding="{Binding Description}" Width="200" />
                     </GridView>
                 </ListView.View>
             </ListView>
