--- a/EventManagementSystemUI/Views/GroupManagementView.xaml
+++ b/EventManagementSystemUI/Views/GroupManagementView.xaml
@@ -3,18 +3,30 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes">
     <Grid Margin="10">
-        <StackPanel>
-            <TextBlock Text="Manage Groups" Style="{StaticResource MaterialDesignHeadline5TextBlock}" Margin="10" 
-                       materialDesign:ElevationAssist.Elevation="Dp2"/>
-            <ListView Height="400" ItemsSource="{Binding Groups}">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+
+        <materialDesign:Card Background="{DynamicResource MaterialDesignPaper}" Padding="10">
+            <TextBlock Text="Event Management" Style="{StaticResource MaterialDesignHeadline5TextBlock}" Margin="0,0,136,0"/>
+        </materialDesign:Card>
+        <Button Content="Refresh" Command="{Binding LoadGroupsCommand}" Margin="430,10,10,10" Style="{DynamicResource MaterialDesignFlatButton}" />
+        <Grid Grid.Row="1" Margin="0,10,0,0">
+            <materialDesign:Card>
+                <StackPanel>
+                    <TextBlock Text="Groups List" Style="{StaticResource MaterialDesignHeadline6TextBlock}" Margin="10" />
+                    <ListView Height="400" ItemsSource="{Binding Groups}">
                 <ListView.View>
-                    <GridView>
-                        <GridViewColumn Header="Name" DisplayMemberBinding="{Binding Name}" Width="150" />
-                        <GridViewColumn Header="City" DisplayMemberBinding="{Binding City}" Width="150" />
-                        <GridViewColumn Header="Description" DisplayMemberBinding="{Binding Description}" Width="200" />
-                    </GridView>
-                </ListView.View>
-            </ListView>
-        </StackPanel>
+                            <GridView>
+                                <GridViewColumn Header="Name" DisplayMemberBinding="{Binding Name}" Width="150" />
+                                <GridViewColumn Header="City" DisplayMemberBinding="{Binding City}" Width="150" />
+                                <GridViewColumn Header="Description" DisplayMemberBinding="{Binding Description}" Width="200" />
+                            </GridView>
+                        </ListView.View>
+                    </ListView>
+                </StackPanel>
+            </materialDesign:Card>
+        </Grid>
     </Grid>
 </UserControl>
