Sign up works, get error for sign in

--- a/EventManagementSystemUI/MainWindow.xaml
+++ b/EventManagementSystemUI/MainWindow.xaml
@@ -48,6 +48,9 @@
 
 
                 </Button>
+                <Button Content="Register" Command="{Binding NavigateCommand}" CommandParameter="Register" Margin="5" Visibility= "{Binding RegisterButtonVisibility}"/>
+                <Button Content="Sign In" Command="{Binding NavigateCommand}" CommandParameter="SignIn" Margin="5" Visibility= "{Binding SignInButtonVisibility}"/>
+                <Button Content="Sign Out" Command="{Binding SignOutCommand}" Margin="5" Visibility= "{Binding SignOutButtonVisibility}"/>
             </StackPanel>
         </materialDesign:Card>
         <!-- Main Content -->
