--- a/EventManagementSystemUI/Views/GroupManagementView.xaml
+++ b/EventManagementSystemUI/Views/GroupManagementView.xaml
@@ -1,7 +1,11 @@
 ﻿<UserControl x:Class="EventManagementSystemUI.Views.GroupManagementView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:vm="clr-namespace:EventManagementSystemUI.ViewModels"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes">
+    <UserControl.DataContext>
+        <vm:MainViewModel />
+    </UserControl.DataContext>
     <Grid Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -9,16 +13,15 @@
         </Grid.RowDefinitions>
 
         <materialDesign:Card Background="{DynamicResource MaterialDesignPaper}" Padding="10">
-            <TextBlock Text="Event Management" Style="{StaticResource MaterialDesignHeadline5TextBlock}" Margin="0,0,136,0"/>
+            <TextBlock Text="List Groups" Style="{StaticResource MaterialDesignHeadline6TextBlock}" Margin="10" />
         </materialDesign:Card>
         <Button Content="Refresh" Command="{Binding LoadGroupsCommand}" Margin="430,10,10,10" Style="{DynamicResource MaterialDesignFlatButton}" />
         <Grid Grid.Row="1" Margin="0,10,0,0">
             <materialDesign:Card>
                 <StackPanel>
-                    <TextBlock Text="List Groups" Style="{StaticResource MaterialDesignHeadline6TextBlock}" Margin="10" />
-            <ListView Height="400" ItemsSource="{Binding Groups}" SelectedItem="{Binding SelectedGroup, Mode=TwoWay}" MouseDoubleClick="ListView_MouseDoubleClick"
+                    <ListView Height="400" ItemsSource="{Binding Groups}" SelectedItem="{Binding SelectedGroup, Mode=TwoWay}" MouseDoubleClick="ListView_MouseDoubleClick"
                       >
-                <ListView.View>
+                        <ListView.View>
                             <GridView>
                                 <GridViewColumn Header="Name" DisplayMemberBinding="{Binding Name}" Width="150" />
                                 <GridViewColumn Header="City" DisplayMemberBinding="{Binding City}" Width="150" />
