--- a/EventManagementSystemUI/Views/ProfileView.xaml
+++ b/EventManagementSystemUI/Views/ProfileView.xaml
@@ -1,11 +1,26 @@
 ﻿<UserControl x:Class="EventManagementSystemUI.Views.ProfileView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes">
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+               xmlns:local="clr-namespace:EventManagementSystemUI.Views"
+            xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
+            xmlns:vm="clr-namespace:EventManagementSystemUI.ViewModels" d:DataContext="{d:DesignInstance Type=vm:MainViewModel}"
+               mc:Ignorable="d"
+            d:DesignHeight="450" d:DesignWidth="800">
+
     <Grid Margin="10">
         <StackPanel>
             <TextBlock Text="User Profile" Style="{StaticResource MaterialDesignHeadline5TextBlock}" Margin="10" />
-            <TextBlock Text="Name: John Doe" Style="{StaticResource MaterialDesignBody1TextBlock}" Margin="10" />
+            <TextBlock Style="{StaticResource MaterialDesignBody1TextBlock}" Margin="10">
+                <Run Text="Name: " />
+                <Run Text="{Binding CurrentUser.Name}" />
+            </TextBlock>
+            <TextBlock Style="{StaticResource MaterialDesignBody1TextBlock}" Margin="10">
+                <Run Text="Username: " />
+                <Run Text="{Binding CurrentUser.Username}" />
+            </TextBlock>
             <TextBlock Text="Groups: Group A, Group B" Style="{StaticResource MaterialDesignBody1TextBlock}" Margin="10" />
         </StackPanel>
     </Grid>
