--- a/EventManagementSystemUI/Views/SignIn.xaml
+++ b/EventManagementSystemUI/Views/SignIn.xaml
@@ -73,7 +73,7 @@
                 </Button.Triggers>
             </Button>
             <Button Content="Cancel" Margin="5" Padding="15,5" Style="{DynamicResource MaterialDesignRaisedButton}"
-                    Background="#FF607D8B" Foreground="White" Command="{Binding CloseRegistrationCommand}"
+                    Background="#FF607D8B" Foreground="White" Command="{Binding CloseLogInCommand}"
                     >
                 <Button.Triggers>
                     <EventTrigger RoutedEvent="Button.MouseEnter">
