--- a/EventManagementSystemUI/Views/SignUpView.xaml
+++ b/EventManagementSystemUI/Views/SignUpView.xaml
@@ -32,7 +32,7 @@
 
         <TextBlock Grid.Row="1" Grid.Column="0" Text="Name:" VerticalAlignment="Center" Margin="5" FontSize="14"/>
         <TextBox Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" Margin="5" Padding="5"
-         Text="{Binding NewUser.Name, UpdateSourceTrigger=PropertyChanged}" 
+         Text="{Binding NewUserDraft.Name, UpdateSourceTrigger=PropertyChanged}" 
          Style="{DynamicResource MaterialDesignOutlinedTextBox}"
          materialDesign:HintAssist.Hint="Enter name"
          materialDesign:HintAssist.IsFloating="True" />
@@ -42,7 +42,7 @@
 
         <!-- Username Input -->
         <TextBox Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" Margin="5" Padding="5"
-         Text="{Binding NewUser.UserName, UpdateSourceTrigger=PropertyChanged}" 
+         Text="{Binding NewUserDraft.UserName, UpdateSourceTrigger=PropertyChanged}" 
          Style="{DynamicResource MaterialDesignOutlinedTextBox}"
          materialDesign:HintAssist.Hint="Enter username"
          materialDesign:HintAssist.IsFloating="True" />
@@ -94,7 +94,7 @@
                 </Button.Triggers>
             </Button>
             <Button Content="Cancel" Margin="5" Padding="15,5" Style="{DynamicResource MaterialDesignRaisedButton}"
-                    Background="#FF607D8B" Foreground="White" Command="{Binding CloseRegistrationCommand}"
+                    Background="#FF607D8B" Foreground="White" Command="{Binding CloseLogInCommand}"
                     >
                 <Button.Triggers>
                     <EventTrigger RoutedEvent="Button.MouseEnter">
