--- a/EventManagementSystemUI/Views/DashboardView.xaml
+++ b/EventManagementSystemUI/Views/DashboardView.xaml
@@ -1,6 +1,7 @@
 ﻿<UserControl x:Class="EventManagementSystemUI.Views.DashboardView"
            xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
            xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+           xmlns:vm="clr-namespace:EventManagementSystemUI.ViewModels"
            xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
           >
     <Grid Margin="10">
@@ -23,7 +24,7 @@
           <materialDesign:Card Grid.Column="0" Margin="0,0,10,0">
               <StackPanel>
                   <TextBlock Text="Upcoming Events" Style="{DynamicResource MaterialDesignHeadline6TextBlock}" Margin="10" />
-                    <ListView x:Name="UpcomingEventsList" ItemsSource="{Binding FutureEvents}" Height="400" MouseDoubleClick="ListView_MouseDoubleClick">
+                    <ListView x:Name="UpcomingEventsList" ItemsSource="{Binding EventVM.FutureEvents}" Height="400" MouseDoubleClick="ListView_MouseDoubleClick">
                       <ListView.View>
                           <GridView>
                               <GridViewColumn Header="Title" DisplayMemberBinding="{Binding Title}" Width="150" />
