--- a/EventManagementSystemUI/Views/GroupManagementView.xaml
+++ b/EventManagementSystemUI/Views/GroupManagementView.xaml
@@ -16,6 +16,7 @@
             <TextBlock Text="Group Management" Style="{StaticResource MaterialDesignHeadline5TextBlock}" Margin="0,0,136,0"/>
         </materialDesign:Card>
         <Button Content="Refresh" Command="{Binding GroupVM.LoadGroupsCommand}" Margin="430,10,10,10" Style="{DynamicResource MaterialDesignFlatButton}" />
+        <Button Content="New Group" Command="{Binding NavVM.ShowNewGroupCommand}" Margin="320,10,110,10" Style="{DynamicResource MaterialDesignFlatButton}" />
         <Grid Grid.Row="1" Margin="0,10,0,0">
             <materialDesign:Card>
                 <StackPanel>
