--- a/EventManagementSystemUI/Views/EventManagementView.xaml
+++ b/EventManagementSystemUI/Views/EventManagementView.xaml
@@ -1,8 +1,9 @@
 ﻿<UserControl x:Class="EventManagementSystemUI.Views.EventManagementView"
-                      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-         xmlns:vm="clr-namespace:EventManagementSystemUI.ViewModels"
-         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes">
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:vm="clr-namespace:EventManagementSystemUI.ViewModels"
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes">
+
     <UserControl.DataContext>
         <vm:MainViewModel />
     </UserControl.DataContext>
@@ -16,7 +17,11 @@
             <TextBlock Text="Event Management" Style="{StaticResource MaterialDesignHeadline5TextBlock}" Margin="0,0,136,0"/>
         </materialDesign:Card>
         <Button Content="Refresh" Command="{Binding EventVM.LoadEventsCommand}" Margin="430,10,10,10" Style="{DynamicResource MaterialDesignFlatButton}" />
-        <Button Content="New Event" Command="{Binding NavVM.ShowNewEventCommand}" Margin="320,10,110,10" Style="{DynamicResource MaterialDesignFlatButton}" />
+        <Button Content="New Event"
+            Command="{Binding NavVM.ShowNewEventCommand}"
+            Visibility="{Binding UserButtonsVisibility}"
+            Margin="320,10,110,10"
+            Style="{DynamicResource MaterialDesignFlatButton}" />
         <Grid Grid.Row="1" Margin="0,10,0,0">
             <materialDesign:Card>
                 <StackPanel>
