--- a/EventManagementSystemUI/Views/GroupDetailsView.xaml
+++ b/EventManagementSystemUI/Views/GroupDetailsView.xaml
@@ -1,48 +1,58 @@
 ﻿<UserControl x:Class="EventManagementSystemUI.Views.GroupDetailsView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-            xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-            xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-            xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-               xmlns:local="clr-namespace:EventManagementSystemUI.Views"
-            xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
-            xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-            xmlns:vm="clr-namespace:EventManagementSystemUI.ViewModels" d:DataContext="{d:DesignInstance Type=vm:GroupDetailsViewModel}"
-               mc:Ignorable="d"
-            d:DesignHeight="450" d:DesignWidth="800">
-    <StackPanel Grid.Row="0" Margin="0,0,0,20" materialDesign:ElevationAssist.Elevation="Dp2">
-        <DockPanel>
-            <TextBlock Text="{Binding SelectedGroup.Name}" 
-                   Style="{StaticResource MaterialDesignHeadline4TextBlock}" 
-                   Foreground="{DynamicResource MaterialDesignBody}" Margin="0,0,10,0"
-                   DockPanel.Dock="Left"/>
-            <Button Content="Close" 
-                Command="{Binding CloseCommand}" 
-                DockPanel.Dock="Right" 
-                ToolTip="Close"
-                Style="{StaticResource MaterialDesignFlatButton}" 
-                Foreground="Red" 
-                HorizontalAlignment="Right" 
-                />
-        </DockPanel>
-        <!-- Groups Info -->
-        <StackPanel Grid.Row="0" Margin="0,0,0,20" materialDesign:ElevationAssist.Elevation="Dp2">
-            <TextBlock Text="{Binding SelectedGroup.City}" Style="{StaticResource MaterialDesignBody1TextBlock}" 
-                       Foreground="{DynamicResource MaterialDesignBody}"/>
-            <TextBlock Text="{Binding SelectedGroup.Description}" Style="{StaticResource MaterialDesignBody1TextBlock}" 
-                       Foreground="{DynamicResource MaterialDesignBody}" TextWrapping="Wrap"/>
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:local="clr-namespace:EventManagementSystemUI.Views"
+             xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+             xmlns:vm="clr-namespace:EventManagementSystemUI.ViewModels"
+             d:DataContext="{d:DesignInstance Type=vm:GroupDetailsViewModel}"
+             mc:Ignorable="d"
+             d:DesignHeight="450" d:DesignWidth="800">
+
+    <ScrollViewer VerticalScrollBarVisibility="Auto">
+        <StackPanel Margin="10" materialDesign:ElevationAssist.Elevation="Dp2">
+            <!-- Header -->
+            <DockPanel Margin="0,0,0,20">
+                <TextBlock Text="{Binding SelectedGroup.Name}" 
+                           Style="{StaticResource MaterialDesignHeadline4TextBlock}" 
+                           Foreground="{DynamicResource MaterialDesignBody}"
+                           Margin="0,0,10,0"
+                           DockPanel.Dock="Left"/>
+                <Button Content="Close" 
+                        Command="{Binding CloseCommand}" 
+                        DockPanel.Dock="Right" 
+                        ToolTip="Close"
+                        Style="{StaticResource MaterialDesignFlatButton}" 
+                        Foreground="Red" 
+                        HorizontalAlignment="Right"/>
+            </DockPanel>
+
+            <!-- Group Info -->
+            <StackPanel Margin="0,0,0,20">
+                <TextBlock Text="{Binding SelectedGroup.City}" 
+                           Style="{StaticResource MaterialDesignBody1TextBlock}" 
+                           Foreground="{DynamicResource MaterialDesignBody}"/>
+                <TextBlock Text="{Binding SelectedGroup.Description}" 
+                           Style="{StaticResource MaterialDesignBody1TextBlock}" 
+                           Foreground="{DynamicResource MaterialDesignBody}" 
+                           TextWrapping="Wrap"/>
+            </StackPanel>
+
+            <!-- Events List -->
+            <ListView ItemsSource="{Binding SelectedGroup.Events}"
+                      Height="300"
+                      SelectedItem="{Binding SelectedEvent, Mode=TwoWay}"
+                      MouseDoubleClick="ListView_MouseDoubleClick">
+                <ListView.View>
+                    <GridView>
+                        <GridViewColumn Header="Title" DisplayMemberBinding="{Binding Title}" Width="200"/>
+                        <GridViewColumn Header="Start Date" DisplayMemberBinding="{Binding StartDate, StringFormat=dd/MM/yyyy HH:mm}" Width="150"/>
+                        <GridViewColumn Header="Location" DisplayMemberBinding="{Binding Location}" Width="200"/>
+                    </GridView>
+                </ListView.View>
+            </ListView>
         </StackPanel>
-        
-        <!-- Events List -->
-        <ListView Grid.Row="1" ItemsSource="{Binding SelectedGroup.Events}" Height="300" SelectedItem="{Binding SelectedEvent, Mode=TwoWay}" MouseDoubleClick="ListView_MouseDoubleClick">
-            <ListView.View>
-                <GridView>
-                    <GridViewColumn Header="Title" DisplayMemberBinding="{Binding Title}" Width="200"/>
-                    <GridViewColumn Header="Start Date" DisplayMemberBinding="{Binding StartDate, StringFormat=dd/MM/yyyy HH:mm}" Width="150"/>
-                    <GridViewColumn Header="Location" DisplayMemberBinding="{Binding Location}" Width="200"/>
-                </GridView>
-            </ListView.View>
-        </ListView>
-
-
-    </StackPanel>
+    </ScrollViewer>
 </UserControl>
