--- a/EventManagementSystemUI/Views/DashboardView.xaml
+++ b/EventManagementSystemUI/Views/DashboardView.xaml
@@ -15,34 +15,36 @@
             
         </materialDesign:Card>
         <Button Content="Refresh" Command="{Binding EventVM.LoadEventsCommand}" Margin="430,10,10,10" Style="{DynamicResource MaterialDesignFlatButton}" />
-        <Grid Grid.Row="1" Margin="0,10,0,0">
-          <Grid.ColumnDefinitions>
-              <ColumnDefinition Width="2*" />
-              <ColumnDefinition Width="*" />
-          </Grid.ColumnDefinitions>
+        <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Auto">
+            <Grid Grid.Row="1" Margin="0,10,0,0">
+              <Grid.ColumnDefinitions>
+                  <ColumnDefinition Width="2*" />
+                  <ColumnDefinition Width="*" />
+              </Grid.ColumnDefinitions>
 
-          <materialDesign:Card Grid.Column="0" Margin="0,0,10,0">
-              <StackPanel>
-                  <TextBlock Text="Upcoming Events" Style="{DynamicResource MaterialDesignHeadline6TextBlock}" Margin="10" />
-                    <ListView x:Name="UpcomingEventsList" ItemsSource="{Binding EventVM.FutureEvents}" Height="400" MouseDoubleClick="ListView_MouseDoubleClick">
-                      <ListView.View>
-                          <GridView>
-                              <GridViewColumn Header="Title" DisplayMemberBinding="{Binding Title}" Width="150" />
-                              <GridViewColumn Header="Date" DisplayMemberBinding="{Binding StartDate, StringFormat={}{0:dd/MM/yyyy}}" Width="100" />
-                              <GridViewColumn Header="Location" DisplayMemberBinding="{Binding Location}" Width="150" />
-                          </GridView>
-                      </ListView.View>
-                  </ListView>
-              </StackPanel>
-          </materialDesign:Card>
+              <materialDesign:Card Grid.Column="0" Margin="0,0,10,0">
+                  <StackPanel>
+                      <TextBlock Text="Upcoming Events" Style="{DynamicResource MaterialDesignHeadline6TextBlock}" Margin="10" />
+                        <ListView x:Name="UpcomingEventsList" ItemsSource="{Binding EventVM.FutureEvents}" Height="400" MouseDoubleClick="ListView_MouseDoubleClick">
+                          <ListView.View>
+                              <GridView>
+                                  <GridViewColumn Header="Title" DisplayMemberBinding="{Binding Title}" Width="150" />
+                                  <GridViewColumn Header="Date" DisplayMemberBinding="{Binding StartDate, StringFormat={}{0:dd/MM/yyyy}}" Width="100" />
+                                  <GridViewColumn Header="Location" DisplayMemberBinding="{Binding Location}" Width="150" />
+                              </GridView>
+                          </ListView.View>
+                      </ListView>
+                  </StackPanel>
+              </materialDesign:Card>
 
-          <materialDesign:Card Grid.Column="1">
-              <StackPanel>
-                  <TextBlock Text="Quick Stats" Style="{DynamicResource MaterialDesignHeadline6TextBlock}" Margin="10" />
-                  <TextBlock Text="Active Events: 5" Style="{DynamicResource MaterialDesignBody1TextBlock}" Margin="10" />
-                  <TextBlock Text="Groups: 3" Style="{DynamicResource MaterialDesignBody1TextBlock}" Margin="10" />
-              </StackPanel>
-          </materialDesign:Card>
-      </Grid>
-  </Grid>
+              <materialDesign:Card Grid.Column="1">
+                  <StackPanel>
+                      <TextBlock Text="Quick Stats" Style="{DynamicResource MaterialDesignHeadline6TextBlock}" Margin="10" />
+                      <TextBlock Text="Active Events: 5" Style="{DynamicResource MaterialDesignBody1TextBlock}" Margin="10" />
+                      <TextBlock Text="Groups: 3" Style="{DynamicResource MaterialDesignBody1TextBlock}" Margin="10" />
+                  </StackPanel>
+              </materialDesign:Card>
+            </Grid>
+        </ScrollViewer>
+    </Grid>
 </UserControl>                    
