--- a/EventManagementSystemUI/Views/GroupManagementView.xaml
+++ b/EventManagementSystemUI/Views/GroupManagementView.xaml
@@ -3,36 +3,58 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:vm="clr-namespace:EventManagementSystemUI.ViewModels"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes">
+
     <UserControl.DataContext>
         <vm:MainViewModel />
     </UserControl.DataContext>
-    <Grid Margin="10">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
 
-        <materialDesign:Card Background="{DynamicResource MaterialDesignPaper}" Padding="10">
-            <TextBlock Text="Group Management" Style="{StaticResource MaterialDesignHeadline5TextBlock}" Margin="0,0,136,0"/>
-        </materialDesign:Card>
-        <Button Content="Refresh" Command="{Binding GroupVM.LoadGroupsCommand}" Margin="430,10,10,10" Style="{DynamicResource MaterialDesignFlatButton}" />
-        <Button Content="New Group" Command="{Binding NavVM.ShowNewGroupCommand}" Visibility="{Binding UserButtonsVisibility}" Margin="320,10,110,10" Style="{DynamicResource MaterialDesignFlatButton}" />
-        <Grid Grid.Row="1" Margin="0,10,0,0">
-            <materialDesign:Card>
-                <StackPanel>
-                    <TextBlock Text="Groups List" Style="{StaticResource MaterialDesignHeadline6TextBlock}" Margin="10" />
-                    <ListView Height="400" ItemsSource="{Binding GroupVM.Groups}" SelectedItem="{Binding GroupVM.SelectedGroup, Mode=TwoWay}" MouseDoubleClick="ListView_MouseDoubleClick"
-                      >
-                        <ListView.View>
-                            <GridView>
-                                <GridViewColumn Header="Name" DisplayMemberBinding="{Binding Name}" Width="150" />
-                                <GridViewColumn Header="City" DisplayMemberBinding="{Binding City}" Width="150" />
-                                <GridViewColumn Header="Description" DisplayMemberBinding="{Binding Description}" Width="200" />
-                            </GridView>
-                        </ListView.View>
-                    </ListView>
-                </StackPanel>
+    <ScrollViewer VerticalScrollBarVisibility="Auto">
+        <Grid Margin="10">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+
+            <!-- Header and Buttons -->
+            <materialDesign:Card Background="{DynamicResource MaterialDesignPaper}" Padding="10">
+                <TextBlock Text="Group Management"
+                           Style="{StaticResource MaterialDesignHeadline5TextBlock}"
+                           Margin="0,0,136,0"/>
             </materialDesign:Card>
+
+            <Button Content="Refresh"
+                    Command="{Binding GroupVM.LoadGroupsCommand}"
+                    Margin="430,10,10,10"
+                    Style="{DynamicResource MaterialDesignFlatButton}" />
+
+            <Button Content="New Group"
+                    Command="{Binding NavVM.ShowNewGroupCommand}"
+                    Visibility="{Binding UserButtonsVisibility}"
+                    Margin="320,10,110,10"
+                    Style="{DynamicResource MaterialDesignFlatButton}" />
+
+            <!-- Groups List -->
+            <Grid Grid.Row="1" Margin="0,10,0,0">
+                <materialDesign:Card>
+                    <StackPanel>
+                        <TextBlock Text="Groups List"
+                                   Style="{StaticResource MaterialDesignHeadline6TextBlock}"
+                                   Margin="10" />
+                        <ListView Height="400"
+                                  ItemsSource="{Binding GroupVM.Groups}"
+                                  SelectedItem="{Binding GroupVM.SelectedGroup, Mode=TwoWay}"
+                                  MouseDoubleClick="ListView_MouseDoubleClick">
+                            <ListView.View>
+                                <GridView>
+                                    <GridViewColumn Header="Name" DisplayMemberBinding="{Binding Name}" Width="150" />
+                                    <GridViewColumn Header="City" DisplayMemberBinding="{Binding City}" Width="150" />
+                                    <GridViewColumn Header="Description" DisplayMemberBinding="{Binding Description}" Width="200" />
+                                </GridView>
+                            </ListView.View>
+                        </ListView>
+                    </StackPanel>
+                </materialDesign:Card>
+            </Grid>
         </Grid>
-    </Grid>
+    </ScrollViewer>
 </UserControl>
