--- a/EventManagementSystemUI/Views/SignUpView.xaml
+++ b/EventManagementSystemUI/Views/SignUpView.xaml
@@ -1,121 +1,117 @@
 ﻿<UserControl x:Class="EventManagementSystemUI.Views.SignUpView"
-          xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-          xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-          xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-          xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:EventManagementSystemUI.Views"
-          xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
-          xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-          xmlns:vm="clr-namespace:EventManagementSystemUI.ViewModels" d:DataContext="{d:DesignInstance Type=vm:MainViewModel}"
+             xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+             xmlns:vm="clr-namespace:EventManagementSystemUI.ViewModels"
+             d:DataContext="{d:DesignInstance Type=vm:MainViewModel}"
              mc:Ignorable="d"
-          d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="450" d:DesignWidth="800">
 
-    <Grid Margin="20">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="150"/>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions>
+    <ScrollViewer VerticalScrollBarVisibility="Auto">
+        <Grid Margin="20">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="150"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
 
-        <!-- Header -->
-        <TextBlock Grid.Row="0" Grid.ColumnSpan="3" Text="Sign Up" FontSize="24" FontWeight="Bold" 
-                Foreground="{DynamicResource MaterialDesignBody}" Margin="0,0,0,20" 
-                HorizontalAlignment="Center"/>
+            <!-- Header -->
+            <TextBlock Grid.Row="0" Grid.ColumnSpan="3" Text="Sign Up" FontSize="24" FontWeight="Bold" 
+                       Foreground="{DynamicResource MaterialDesignBody}" Margin="0,0,0,20" 
+                       HorizontalAlignment="Center"/>
 
-        <TextBlock Grid.Row="1" Grid.Column="0" Text="Name:" VerticalAlignment="Center" Margin="5" FontSize="14"/>
-        <TextBox Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" Margin="5" Padding="5"
-         Text="{Binding UserVM.NewUserDraft.Name, UpdateSourceTrigger=PropertyChanged}" 
-         Style="{DynamicResource MaterialDesignOutlinedTextBox}"
-         materialDesign:HintAssist.Hint="Enter name"
-         materialDesign:HintAssist.IsFloating="True" />
-        
-        <!-- Username Label -->
-        <TextBlock Grid.Row="2" Grid.Column="0" Text="Username:" VerticalAlignment="Center" Margin="5" FontSize="14"/>
+            <!-- Name -->
+            <TextBlock Grid.Row="1" Grid.Column="0" Text="Name:" VerticalAlignment="Center" Margin="5" FontSize="14"/>
+            <TextBox Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" Margin="5" Padding="5"
+                     Text="{Binding UserVM.NewUserDraft.Name, UpdateSourceTrigger=PropertyChanged}" 
+                     Style="{DynamicResource MaterialDesignOutlinedTextBox}"
+                     materialDesign:HintAssist.Hint="Enter name"
+                     materialDesign:HintAssist.IsFloating="True" />
 
-        <!-- Username Input -->
-        <TextBox Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" Margin="5" Padding="5"
-         Text="{Binding UserVM.NewUserDraft.UserName, UpdateSourceTrigger=PropertyChanged}" 
-         Style="{DynamicResource MaterialDesignOutlinedTextBox}"
-         materialDesign:HintAssist.Hint="Enter username"
-         materialDesign:HintAssist.IsFloating="True" />
+            <!-- Username -->
+            <TextBlock Grid.Row="2" Grid.Column="0" Text="Username:" VerticalAlignment="Center" Margin="5" FontSize="14"/>
+            <TextBox Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" Margin="5" Padding="5"
+                     Text="{Binding UserVM.NewUserDraft.UserName, UpdateSourceTrigger=PropertyChanged}" 
+                     Style="{DynamicResource MaterialDesignOutlinedTextBox}"
+                     materialDesign:HintAssist.Hint="Enter username"
+                     materialDesign:HintAssist.IsFloating="True" />
 
-        <!-- Password Label -->
-        <TextBlock Grid.Row="3" Grid.Column="0" Text="Password:" VerticalAlignment="Center" Margin="5" FontSize="14"/>
+            <!-- Password -->
+            <TextBlock Grid.Row="3" Grid.Column="0" Text="Password:" VerticalAlignment="Center" Margin="5" FontSize="14"/>
+            <PasswordBox Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="2" Margin="5" Padding="5"
+                         x:Name="PasswordBox"
+                         Style="{StaticResource MaterialDesignFloatingHintPasswordBox}"
+                         materialDesign:HintAssist.Hint="Enter password"
+                         materialDesign:HintAssist.IsFloating="True" />
 
-        <!-- Password Input -->
-        <PasswordBox Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="2" Margin="5" Padding="5"
-             x:Name="PasswordBox"
-             Style="{StaticResource MaterialDesignFloatingHintPasswordBox}"
-             materialDesign:HintAssist.Hint="Enter password"
-             materialDesign:HintAssist.IsFloating="True" />
+            <!-- Repeat Password -->
+            <TextBlock Grid.Row="4" Grid.Column="0" Text="Repeat Password:" VerticalAlignment="Center" Margin="5" FontSize="14"/>
+            <PasswordBox Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="2" Margin="5" Padding="5"
+                         x:Name="RepeatPasswordBox"
+                         Style="{StaticResource MaterialDesignFloatingHintPasswordBox}"
+                         materialDesign:HintAssist.Hint="Repeat password"
+                         materialDesign:HintAssist.IsFloating="True" />
 
-        <!-- Repeat Password Label -->
-        <TextBlock Grid.Row="4" Grid.Column="0" Text="Repeat Password:" VerticalAlignment="Center" Margin="5" FontSize="14"/>
+            <!-- Buttons -->
+            <StackPanel Grid.Row="5" Grid.ColumnSpan="3" Orientation="Horizontal" HorizontalAlignment="Right" Margin="5">
+                <Button Content="Submit" Margin="5" Padding="15,5" Style="{DynamicResource MaterialDesignRaisedButton}"
+                        Background="#FF4CAF50" Foreground="White"
+                        Click="Submit_Click"
+                        Command="{Binding UserVM.SubmitRegistrationCommand}">
+                    <Button.Triggers>
+                        <EventTrigger RoutedEvent="Button.MouseEnter">
+                            <BeginStoryboard>
+                                <Storyboard>
+                                    <ColorAnimation Storyboard.TargetProperty="(Button.Background).(SolidColorBrush.Color)"
+                                                    To="#FF66BB6A" Duration="0:0:0.2" />
+                                </Storyboard>
+                            </BeginStoryboard>
+                        </EventTrigger>
+                        <EventTrigger RoutedEvent="Button.MouseLeave">
+                            <BeginStoryboard>
+                                <Storyboard>
+                                    <ColorAnimation Storyboard.TargetProperty="(Button.Background).(SolidColorBrush.Color)"
+                                                    To="#FF4CAF50" Duration="0:0:0.2" />
+                                </Storyboard>
+                            </BeginStoryboard>
+                        </EventTrigger>
+                    </Button.Triggers>
+                </Button>
 
-        <!-- Repeat Password Input -->
-        <PasswordBox Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="2" Margin="5" Padding="5"
-             x:Name="RepeatPasswordBox"
-             Style="{StaticResource MaterialDesignFloatingHintPasswordBox}"
-             materialDesign:HintAssist.Hint="Repeat password"
-             materialDesign:HintAssist.IsFloating="True" />
-
-
-
-        <!-- Buttons -->
-        <StackPanel Grid.Row="5" Grid.ColumnSpan="3" Orientation="Horizontal" HorizontalAlignment="Right" Margin="5">
-            <Button Content="Submit" Margin="5" Padding="15,5" Style="{DynamicResource MaterialDesignRaisedButton}"
-                    Background="#FF4CAF50" Foreground="White"  Click="Submit_Click" Command="{Binding UserVM.SubmitRegistrationCommand}"
-                    >
-                <Button.Triggers>
-                    <EventTrigger RoutedEvent="Button.MouseEnter">
-                        <BeginStoryboard>
-                            <Storyboard>
-                                <ColorAnimation Storyboard.TargetProperty="(Button.Background).(SolidColorBrush.Color)"
-                                                To="#FF66BB6A" Duration="0:0:0.2" />
-                            </Storyboard>
-                        </BeginStoryboard>
-                    </EventTrigger>
-                    <EventTrigger RoutedEvent="Button.MouseLeave">
-                        <BeginStoryboard>
-                            <Storyboard>
-                                <ColorAnimation Storyboard.TargetProperty="(Button.Background).(SolidColorBrush.Color)"
-                                                To="#FF4CAF50" Duration="0:0:0.2" />
-                            </Storyboard>
-                        </BeginStoryboard>
-                    </EventTrigger>
-                </Button.Triggers>
-            </Button>
-            <Button Content="Cancel" Margin="5" Padding="15,5" Style="{DynamicResource MaterialDesignRaisedButton}"
-                    Background="#FF607D8B" Foreground="White" Command="{Binding UserVM.CloseLogInCommand}"
-                    >
-                <Button.Triggers>
-                    <EventTrigger RoutedEvent="Button.MouseEnter">
-                        <BeginStoryboard>
-                            <Storyboard>
-                                <ColorAnimation Storyboard.TargetProperty="(Button.Background).(SolidColorBrush.Color)"
-                                                To="#FF78909C" Duration="0:0:0.2" />
-                            </Storyboard>
-                        </BeginStoryboard>
-                    </EventTrigger>
-                    <EventTrigger RoutedEvent="Button.MouseLeave">
-                        <BeginStoryboard>
-                            <Storyboard>
-                                <ColorAnimation Storyboard.TargetProperty="(Button.Background).(SolidColorBrush.Color)"
-                                                To="#FF607D8B" Duration="0:0:0.2" />
-                            </Storyboard>
-                        </BeginStoryboard>
-                    </EventTrigger>
-                </Button.Triggers>
-            </Button>
-        </StackPanel>
-
-    </Grid>
+                <Button Content="Cancel" Margin="5" Padding="15,5" Style="{DynamicResource MaterialDesignRaisedButton}"
+                        Background="#FF607D8B" Foreground="White" Command="{Binding UserVM.CloseLogInCommand}">
+                    <Button.Triggers>
+                        <EventTrigger RoutedEvent="Button.MouseEnter">
+                            <BeginStoryboard>
+                                <Storyboard>
+                                    <ColorAnimation Storyboard.TargetProperty="(Button.Background).(SolidColorBrush.Color)"
+                                                    To="#FF78909C" Duration="0:0:0.2" />
+                                </Storyboard>
+                            </BeginStoryboard>
+                        </EventTrigger>
+                        <EventTrigger RoutedEvent="Button.MouseLeave">
+                            <BeginStoryboard>
+                                <Storyboard>
+                                    <ColorAnimation Storyboard.TargetProperty="(Button.Background).(SolidColorBrush.Color)"
+                                                    To="#FF607D8B" Duration="0:0:0.2" />
+                                </Storyboard>
+                            </BeginStoryboard>
+                        </EventTrigger>
+                    </Button.Triggers>
+                </Button>
+            </StackPanel>
+        </Grid>
+    </ScrollViewer>
 </UserControl>
