Increase main window height and center on startup
Updated the main window's height from 450 to 600 pixels.
Set the window's startup location to "CenterScreen" for better user experience.

--- a/EventManagementSystemUI/MainWindow.xaml
+++ b/EventManagementSystemUI/MainWindow.xaml
@@ -4,7 +4,7 @@
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:vm="clr-namespace:EventManagementSystemUI.ViewModels"
         xmlns:local="clr-namespace:EventManagementSystemUI.Views"
-        Title="Event Management System" Height="450" Width="800">
+        Title="Event Management System" Height="600" Width="800"  WindowStartupLocation="CenterScreen">
     <Window.DataContext>
         <vm:MainViewModel />
     </Window.DataContext>
